# unofficial-loongarch-intrinsics-guide

./: .gitignore  404.html  CITATION.cff  DEVELOPMENT.md  LICENSE  README.md  check.py  check_instr.py  check_lsx.py  gcc_lasxintrin.h  gcc_lsxintrin.h  gen_measure.py  index.html  index.md  llms.txt  main.css  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml
code/: .gitignore  Makefile  adc_b.cpp  adc_b.h  adc_d.cpp  adc_d.h  adc_h.cpp  adc_h.h  adc_w.cpp  adc_w.h  addu12i_d.cpp  addu12i_d.h  addu12i_w.cpp  addu12i_w.h  armadc_w.cpp  armadc_w.h  armadd_w.cpp  armadd_w.h  armand_w.cpp  armand_w.h  armmfflag.cpp  armmfflag.h  armmov_d.cpp  armmov_d.h  armmov_w.cpp  armmov_w.h  armmove.cpp  armmove.h  armmtflag.cpp  armmtflag.h  armnot_w.cpp  armnot_w.h  armor_w.cpp  armor_w.h  armrotr_w.cpp  armrotr_w.h  armrotri_w.cpp  armrotri_w.h  armrrx_w.cpp  armrrx_w.h  (+2976 more)
code/lbt/: Makefile  adc_b.h  adc_d.h  adc_h.h  adc_w.h  addu12i_d.h  addu12i_w.h  analyze_undef_reports.py  armadc_w.h  armadd_w.h  armand_w.h  armmfflag.h  armmov_d.h  armmov_w.h  armmove.h  armmtflag.h  armnot_w.h  armor_w.h  armrotr_w.h  armrotri_w.h  armrrx_w.h  armsbc_w.h  armsll_w.h  (+155 more)
diagram/: gen.py
docs/: index.md  latency_throughput.md  lbt_basics.md  loongarch_simd_basics.md  main.css  migrating_avx.md  migrating_sse.md  viewer.md
latency_throughput/: index.html  index.md
lbt_basics/: index.html  index.md
loongarch_simd_basics/: index.html  index.md
migrating_avx/: index.html  index.md
migrating_sse/: index.html  index.md
viewer/: index.html  index.md
(+159 files in other folders)
